--- a/index.css
+++ b/index.css
@@ -11,5 +11,5 @@
    cursor: pointer;
    width: 8px !important;
    border-radius: 4px 4px;
-   background-color: #3b82f6 !important;
+   background-color: #facc15 !important;
 }
