--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 .repo-item.hover img {
    width: 30px !important;
    height: 30px !important;
+   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important;
 }
 
 .repo-item.hover .star-bar {
