--- a/index.css
+++ b/index.css
@@ -17,5 +17,5 @@
    cursor: pointer;
    width: 8px !important;
    border-radius: 4px 4px;
-   background-color: #facc15 !important;
+   background-color: var(--yellow-300) !important;
 }
