--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@
 .repo-item.hover img {
    width: 30px !important;
    height: 30px !important;
+   margin-bottom: -5px !important;
+   margin-top: -5px !important;
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important;
 }
 
