--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
    margin-bottom: -5px !important;
    margin-top: -5px !important;
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important;
+   z-index: 200;
 }
 
 .repo-item.hover .star-bar {
