--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 :root {
    --yellow-300: #fde047;
    --star-yellow: #facc15;
+   --red-600: rgb(220 38 38);
+   --sorting-green: rgb(34 197 94);
 }
 
 .repo-item.hover {
@@ -16,9 +18,16 @@
    z-index: 200;
 }
 
+.repo-item.green .star-bar {
+   background-color: var(--sorting-green);
+}
+
+.repo-item.comparison .star-bar {
+   background-color: var(--red-600)
+}
+
 .repo-item.hover .star-bar {
-   cursor: pointer;
    width: 8px !important;
    border-radius: 4px 4px 0px 0px !important;
-   background-color: var(--yellow-300) !important;
+   background-color: var(--yellow-300);
 }
