--- a/index.css
+++ b/index.css
@@ -1,8 +1,19 @@
-:root {
+   :root {
+   --blue-300: rgb(147 197 253);
+   --blue-400: rgb(96 165 250);
+   --blue-500: rgb(59 130 246);
+   --blue-600: rgb(37 99 235);
+   --purple-600: rgb(147 51 234);
+   --purple-700: rgb(107 33 168);
+   --purple-800: rgb(88 28 135);
+   --gray-300: rgb(209 213 219);
+   --gray-950: rgb(3 7 18);
    --yellow-300: #fde047;
    --star-yellow: #facc15;
    --red-600: rgb(220 38 38);
-   --sorting-green: rgb(34 197 94);
+   --anchor-color: var(--blue-300);
+   --background: var(--gray-950);
+   font-family: 'Open Sans', sans-serif;
 }
 
 .repo-item.hover .star-bar {
@@ -25,11 +36,22 @@
    z-index: 200;
 }
 
-.repo-item.green .star-bar {
-   background-color: var(--sorting-green);
+.repo-item.anchor .star-bar {
+   background-color: var(--blue-300);
 }
 
 .repo-item.comparison .star-bar {
-   background-color: var(--red-600)
+   background-color: var(--purple-600)
 }
 
+.header-border {
+   height: 1.5px;
+   background: linear-gradient(to right, var(--purple-600), var(--blue-300) 80%);
+}
+
+@media screen and (min-width: 768px) {
+   .header-border {
+      height: 2px;
+      background: linear-gradient(to right, var(--purple-600), var(--blue-300) 80%);
+   }
+}
