--- a/output.css
+++ b/output.css
@@ -2121,6 +2121,10 @@ input:checked + .toggle-bg {
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-40 {
+    height: 10rem;
+  }
+
   .lg\:justify-end {
     justify-content: flex-end;
   }
