--- a/index.css
+++ b/index.css
@@ -69,3 +69,13 @@
       background: linear-gradient(to right, var(--purple-600), var(--blue-300) 80%);
    }
 }
+
+.button-grid {
+   grid-template-columns: min-content;
+}
+
+@media screen and (min-width: 640px) {
+   .button-grid {
+      grid-template-columns: min-content min-content;
+   }
+}
